Ya casi. Vamos a los estilos!

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <title>rocola_cliente</title>
   </head>
-  <body>
+  <body style="background-color: #42A382;">
     <noscript>
       <strong>We're sorry but rocola_cliente doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
