--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>rocola_cliente</title>
+    <title>Rocola</title>
   </head>
   <body style="background-color: #42A382;">
     <noscript>
-      <strong>We're sorry but rocola_cliente doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>Esta rocola no funciona sin JavaScript.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
