Cambios de diseño.

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Rocola</title>
   </head>
-  <body style="background-color: #42A382;">
+  <body style="background-color: #52a37a;">
     <noscript>
       <strong>Esta rocola no funciona sin JavaScript.</strong>
     </noscript>
