--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,25 @@
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>Rocola</title>
+
+
+<style type="text/css">
+  
+html {
+  background-color: #52a37a;
+  font-size: 62.5%;
+}
+
+@media(min-width: 1024px) {
+  html {
+    font-size: 120%;
+  }
+}
+
+</style>
+
   </head>
-  <body style="background-color: #52a37a;">
+  <body>
     <noscript>
       <strong>Esta rocola no funciona sin JavaScript.</strong>
     </noscript>
