--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,20 @@
   
 html {
   background-color: #52a37a;
+  /* font-size: 62.5%; */
+  font-size: 16px;
+}
+
+body {
   font-size: 62.5%;
 }
 
 @media(min-width: 1024px) {
   html {
-    font-size: 120%;
+    /* font-size: 120%; */
+    font-size: 18px;
   }
+  
 }
 
 </style>
